# tomato

./: AUTHORS  README.md  io.github.ellie_commons.tomato.yml  meson.build
.github/workflows/: ci.yml  merge.yml
data/: Application.css  meson.build  tomato.desktop.in  tomato.gresource.xml  tomato.gschema.xml  tomato.metainfo.xml.in
po/: POTFILES  io.github.ellie_commons.tomato.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  Config.vala.in  Enums.vala  MainWindow.vala
src/Dialogs/: PreferencesDialog.vala
src/Managers/: LauncherManager.vala  NotificationManager.vala  SoundManager.vala  WorkManager.vala
src/Services/: Preferences.vala  SavedState.vala  Settings.vala
src/Utils/: Countdown.vala  Timer.vala
src/Widgets/: ValueRange.vala
